Fixed bug on small screens
Fixed a bug with outlining of the order data on small screens

--- a/css/styles.css
+++ b/css/styles.css
@@ -97,6 +97,12 @@ p {
 );
 }
 
+.inforow {
+	padding-left: 15px;
+	padding-right: 15px;
+
+}
+
 #prices {
 	text-align: right;
 }
